Fix some deployment ssl certs path to avoid editing
Add favicon.ico
fix canvas covering video and sidebar
alert popup in the home page changed to alert in the page
changed token from sessionStorage to localStorage
token input fills URL field while typing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -370,7 +370,7 @@ Sidebar
   transition: var(--transition);
   -webkit-transform: translateX(100%);
   transform: translateX(100%);
-  z-index: 5;
+  z-index: 8;
 }
 .show-menu {
   -webkit-transform: translateX(0);
@@ -532,7 +532,7 @@ Video
   left: 0;
 }
 .frontVideo {
-  z-index: 10;
+  z-index: 7;
 }
 
 /*
@@ -925,4 +925,13 @@ Home Page
 .btn-start:hover {
   -webkit-transform: scale(1.1275);
   transform: scale(1.1275);
+}
+.alertCodeNotProvided {
+  text-align: center;
+  display: grid;
+  place-items: center;
+}
+.alert-show {
+  opacity: 0;
+  transition: 1s linear all;
 }
